2018-07-03  Fujii Hironori  <Hironori.Fujii@sony.com>

        update-webkitgtk-flatpak fails if running with python2
        https://bugs.webkit.org/show_bug.cgi?id=187240

        Reviewed by Michael Catanzaro.

        urllib.urlretrieve of Python2 sends invalid requests. Use
        urllib2.urlopen instead.

        * flatpak/flatpakutils.py: Import urllib2.urlopen for Python2,
        urllib.request.urlopen for Python3.
        (FlatpakRepo.repo_file): Copy the content of urlopen result to the
        temporary file.

2018-07-03  Chris Dumez  <cdumez@apple.com>

        Make CallbackMap::invalidate() safe to re-enter
        https://bugs.webkit.org/show_bug.cgi?id=187298
        <rdar://problem/41057167>

        Reviewed by Geoffrey Garen.

        Add API test coverage.

        * TestWebKitAPI/Tests/WebKitCocoa/WebContentProcessDidTerminate.mm:
        (TEST):

2018-07-03  Chris Dumez  <cdumez@apple.com>

        [Cocoa] Disable vnode guard related simulated crashes for WKTR / DRT and WebSQL
        https://bugs.webkit.org/show_bug.cgi?id=187270
        <rdar://problem/40674034>

        Reviewed by Geoffrey Garen.

        Disable vnode guard related simulated crashes for WKTR / DRT by setting the
        expected environment variable in the test driver.

        * Scripts/webkitpy/port/driver.py:
        (Driver._setup_environ_for_driver):

2018-07-03  Eric Carlson  <eric.carlson@apple.com>

        Video sometimes flickers when playing to AppleTV
        https://bugs.webkit.org/show_bug.cgi?id=187193
        <rdar://problem/40153865>

        Unreviewed, fix test broken by r233435.

        * TestWebKitAPI/Tests/WebKitLegacy/ios/AudioSessionCategoryIOS.mm:
        (TestWebKitAPI::waitUntilAudioSessionCategoryIsEqualTo): Poll for a change in audio session 
        category because it doesn't necessarily happen synchronously.
        (TestWebKitAPI::TEST):

2018-07-03  Thibault Saunier  <tsaunier@igalia.com>
